--- a/views/preamble-i.html
+++ b/views/preamble-i.html
@@ -19,7 +19,7 @@
     </div>
     
     <div id="git-server">
-      <a href="git.ryanmj.xyz"><img src="res/folder-git.png" alt="git" class="taskimg"></a>
+      <a href="https://git.ryanmj.xyz"><img src="res/folder-git.png" alt="git" class="taskimg"></a>
       <h4>Git Server</h4>
     </div>
 
