New terminal.css border image

--- a/css/terminal.css
+++ b/css/terminal.css
@@ -95,7 +95,7 @@ h4 {
 
 .twin {
   border: 1.5em solid transparent;
-  border-image: url(../res/terminal.png) 38 37 38 36 round;
+  border-image: url(../res/2008.png) 19 12 round;
   padding: 0;
   /* positioning */
   margin: 0 auto;
