favicon and post css fix

--- a/posts/views/preamble-i.html
+++ b/posts/views/preamble-i.html
@@ -9,12 +9,12 @@
     </div>
 
     <div id="blog">
-      <a href="posts/"><img src="../res/folder-documents.png" alt="Blog" class="taskimg"></a>
+      <a href="../posts/"><img src="../res/folder-documents.png" alt="Blog" class="taskimg"></a>
       <h4>Blog</h4>
     </div>
 
     <div id="files">
-      <a href="files/"><img src="../res/ktorrent.png" alt="Files" class="taskimg"></a>
+      <a href="../files/"><img src="../res/ktorrent.png" alt="Files" class="taskimg"></a>
       <h4>Files</h4>
     </div>
     
