--- a/posts/views/preamble-i.html
+++ b/posts/views/preamble-i.html
@@ -1,4 +1,4 @@
-<script defer src="scripts/site-bkgs/main.js"></script>
+<script defer src="../scripts/site-bkgs/main.js"></script>
 <div id="task-meta" class="topl">
   <h4 style="margin-left:1em; margin-top:0.5em;">Links</h4>
   <hr>
