Added css, simplify header HTML, fix relative path bug in server

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,52 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+          "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-<head>
-<!-- 2021-04-22 Thu 02:37 -->
-<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Ryan's Homepage</title>
-<meta name="generator" content="Org mode" />
-<meta name="author" content="Ryan Jeffrey" />
-<link rel="stylesheet" type="text/css" href="css/terminal.css" />
-<script defer src="scripts/main.js"></script>
-<link rel="shortcut icon" type="image/x-icon" href="res/favicon-32x32.ico">
-</head>
-<body>
-<div id="preamble" class="status">
-<script defer src="scripts/site-bkgs/main.js"></script>
-<div id="task-meta" class="topl">
-  <h4 style="margin-left:1em; margin-top:0.5em;">Links</h4>
-  <hr>
-  
-  <div id="taskbar">
-    <div id="home">
-      <a href="index.html"><img src="res/user-home.png" alt="Homepage" class="taskimg"></a>
-      <h4>Home</h4>
-    </div>
+  <head>
+    <!-- 2021-04-22 Thu 02:37 -->
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Ryan's Homepage</title>
+    <meta name="generator" content="Org mode" />
+    <meta name="author" content="Ryan Jeffrey" />
+    <link rel="stylesheet" type="text/css" href="/css/terminal.css" />
+    <script defer src="/scripts/main.js"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="res/favicon-32x32.ico">
+  </head>
+  <body>
+    <div id="preamble" class="status">
+      <script defer src="scripts/site-bkgs/main.js"></script>
+      <div id="task-meta" class="topl">
+        <h4 style="margin-left:1em; margin-top:0.5em;">Links</h4>
+        <hr>
+        
+        <div id="taskbar">
+          <div id="home">
+            <a href="/"><img src="res/user-home.png" alt="Homepage" ></a>
+            <h4>Home</h4>
+          </div>
 
-    <div id="blog">
-      <a href="posts/"><img src="res/folder-documents.png" alt="Blog" class="taskimg"></a>
-      <h4>Blog</h4>
-    </div>
+          <div id="blog">
+            <a href="/posts/"><img src="res/folder-documents.png" alt="Blog" ></a>
+            <h4>Blog</h4>
+          </div>
 
-    <div id="files">
-      <a href="files/"><img src="res/ktorrent.png" alt="Files" class="taskimg"></a>
-      <h4>Files</h4>
-    </div>
-    
-    <div id="git-server">
-      <a href="https://git.ryanmj.xyz"><img src="res/folder-git.png" alt="git" class="taskimg"></a>
-      <h4>Git Server</h4>
-    </div>
+          <div id="files">
+            <a href="/files/"><img src="res/ktorrent.png" alt="Files" ></a>
+            <h4>Files</h4>
+          </div>
+          
+          <div id="git-server">
+            <a href="https://git.ryanmj.xyz"><img src="res/folder-git.png" alt="git" ></a>
+            <h4>Git Server</h4>
+          </div>
 
-    <div id="contact-me">
-      <a href="mailto:ryan@ryanmj.xyz"><img alt="Email me" src="res/kopete.png"/></a>
-      <h4>Contact Me</h4>
-    </div>
-  </div>
-</div>
+          <div id="contact-me">
+            <a href="mailto:ryan@ryanmj.xyz"><img alt="Email me" src="res/kopete.png" /></a>
+            <h4>Contact Me</h4>
+          </div>
+        </div>
+      </div>
 
 <!--                                          
  _____ _            ___           _           _        _       _ 
@@ -88,7 +88,7 @@
 
 {{{body}}}
 
-</div>
+    </div>
 
-</body>
+  </body>
 </html>
