--- a/views/partials/terminalTemplate.handlebars
+++ b/views/partials/terminalTemplate.handlebars
@@ -1,21 +1,21 @@
-{{#if isTerminal}}
-  <div class="twin topl">
-    <div style="tcontent">
-    </div>
-    <div id="content">
-      {{#if lsList}}
-        <p>
-          <span class="prompt1">ryan</span><span class="prompt2">@</span><span class="prompt3">themainframe</span><span class="prompt4"></span> ls {{where}}
-        </p>
+<div class="twin topl">
+  <div style="tcontent">
+  </div>
+  <div id="content">
+    {{#each commands}}
+      {{#if markup}}
+        <hr class="prompt-break">
+        <span class="prompt1">ryan</span><span class="prompt2">@</span><span class="prompt3">themainframe</span><span class="prompt4"></span> <span>cat {{args}}</span>
+        {{{markup}}}
+      {{else}}
+        <hr class="prompt-break">
+        <span class="prompt1">ryan</span><span class="prompt2">@</span><span class="prompt3">themainframe</span><span class="prompt4"></span> <span>ls {{args}}</span>
         {{#each lsList}}
           {{> lsTemplate}}
         {{/each}}
       {{/if}}
+    {{/each}}
 
-      {{#if markup}}
-        {{{markup}}}
-      {{/if}}
-    </div>
   </div>
-{{/if}}
+</div>
 
