site-bkgs git module, site-bkgs changes to server and make

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div id="preamble" class="status">
-      <script defer src="scripts/site-bkgs/main.js"></script>
+      <script type="module" defer src="/site-bkgs/bin/archs.js"></script>
       <div id="task-meta" class="topl">
         <h4 style="margin-left:1em; margin-top:0.5em;">Links</h4>
         <hr>
