--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,27 +21,27 @@
         
         <div id="taskbar">
           <div id="home">
-            <a href="/"><img src="res/user-home.png" alt="Homepage" ></a>
+            <a href="/"><img src="res/user-home.png" alt="Homepage" class="taskimg"></a>
             <h4>Home</h4>
           </div>
 
           <div id="blog">
-            <a href="/posts/"><img src="res/folder-documents.png" alt="Blog" ></a>
+            <a href="/posts/"><img src="res/folder-documents.png" alt="Blog" class="taskimg"></a>
             <h4>Blog</h4>
           </div>
 
           <div id="files">
-            <a href="/files/"><img src="res/ktorrent.png" alt="Files" ></a>
+            <a href="/files/"><img src="res/ktorrent.png" alt="Files" class="taskimg"></a>
             <h4>Files</h4>
           </div>
           
           <div id="git-server">
-            <a href="https://git.ryanmj.xyz"><img src="res/folder-git.png" alt="git" ></a>
+            <a href="https://git.ryanmj.xyz"><img src="res/folder-git.png" alt="git" class="taskimg"></a>
             <h4>Git Server</h4>
           </div>
 
           <div id="contact-me">
-            <a href="mailto:ryan@ryanmj.xyz"><img alt="Email me" src="res/kopete.png" /></a>
+            <a href="mailto:ryan@ryanmj.xyz"><img alt="Email me" src="res/kopete.png" class="taskimg"></a>
             <h4>Contact Me</h4>
           </div>
         </div>
