--- a/views/partials/terminalTemplate.handlebars
+++ b/views/partials/terminalTemplate.handlebars
@@ -6,7 +6,9 @@
       {{#if markup}}
         <hr class="prompt-break">
         <span class="prompt1">ryan</span><span class="prompt2">@</span><span class="prompt3">themainframe</span><span class="prompt4"></span> <span>cat {{args}}</span>
-        {{{markup}}}
+        <div class="cat">
+          {{{markup}}}
+        </div>
       {{else}}
         <hr class="prompt-break">
         <span class="prompt1">ryan</span><span class="prompt2">@</span><span class="prompt3">themainframe</span><span class="prompt4"></span> <span>ls {{args}}</span>
