Fix image file bug

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
     <meta name="author" content="Ryan Jeffrey" />
     <link rel="stylesheet" type="text/css" href="/css/terminal.css" />
     <script defer src="/scripts/main.js"></script>
-    <link rel="shortcut icon" type="image/x-icon" href="res/favicon-32x32.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/res/favicon-32x32.ico">
   </head>
   <body>
     <div id="preamble" class="status">
@@ -21,27 +21,27 @@
         
         <div id="taskbar">
           <div id="home">
-            <a href="/"><img src="res/user-home.png" alt="Homepage" class="taskimg"></a>
+            <a href="/"><img src="/res/user-home.png" alt="Homepage" class="taskimg"></a>
             <h4>Home</h4>
           </div>
 
           <div id="blog">
-            <a href="/posts/"><img src="res/folder-documents.png" alt="Blog" class="taskimg"></a>
+            <a href="/posts/"><img src="/res/folder-documents.png" alt="Blog" class="taskimg"></a>
             <h4>Blog</h4>
           </div>
 
           <div id="files">
-            <a href="/files/"><img src="res/ktorrent.png" alt="Files" class="taskimg"></a>
+            <a href="/files/"><img src="/res/ktorrent.png" alt="Files" class="taskimg"></a>
             <h4>Files</h4>
           </div>
           
           <div id="git-server">
-            <a href="https://git.ryanmj.xyz"><img src="res/folder-git.png" alt="git" class="taskimg"></a>
+            <a href="https://git.ryanmj.xyz"><img src="/res/folder-git.png" alt="git" class="taskimg"></a>
             <h4>Git Server</h4>
           </div>
 
           <div id="contact-me">
-            <a href="mailto:ryan@ryanmj.xyz"><img alt="Email me" src="res/kopete.png" class="taskimg"></a>
+            <a href="mailto:ryan@ryanmj.xyz"><img alt="Email me" src="/res/kopete.png" class="taskimg"></a>
             <h4>Contact Me</h4>
           </div>
         </div>
@@ -87,24 +87,24 @@
       {{{body}}}
       <div class="fttr">
         <a href="https://www.gnu.org/software/emacs/">
-          <img alt="POWERED BY EMACS" src="res/stickies/emacs.png" />
+          <img alt="POWERED BY EMACS" src="/res/stickies/emacs.png" />
         </a>
         <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">
-          <img alt="GPLv3" src="res/stickies/gplv3.png" />
+          <img alt="GPLv3" src="/res/stickies/gplv3.png" />
         </a>
         <a href="https://www.sxemacs.org/">
-          <img alt="POWERED BY SXEMACS" src="res/stickies/sxe.png" />
+          <img alt="POWERED BY SXEMACS" src="/res/stickies/sxe.png" />
         </a>
         <a href="https://www.xemacs.org/">
-          <img alt="POWERED BY XEMACS" src="res/stickies/xe.png" />
+          <img alt="POWERED BY XEMACS" src="/res/stickies/xe.png" />
         </a>
 
         <a href='https://ipv6-test.com/validate.php?url=referer'>
-          <img src='res/stickies/button-ipv6-big.png' alt='ipv6 ready' title='ipv6 ready'>
+          <img src='/res/stickies/button-ipv6-big.png' alt='ipv6 ready' title='ipv6 ready'>
         </a>
         
         <a href="https://jigsaw.w3.org/css-validator/check/referer">
-          <img src="res/stickies/vcss.gif" alt="Valid CSS!">
+          <img src="/res/stickies/vcss.gif" alt="Valid CSS!">
         </a>
       </div>
     </div>
