--- a/views/partials/terminalTemplate.handlebars
+++ b/views/partials/terminalTemplate.handlebars
@@ -7,7 +7,7 @@
         <hr class="prompt-break">
         <span class="prompt1">ryan</span><span class="prompt2">@</span><span class="prompt3">themainframe</span><span class="prompt4"></span> <span>cat {{args}}</span>
         <div class="cat">
-          {{{markup}}}
+          {{> (lookup . 'markup')}}
         </div>
       {{else}}
         <hr class="prompt-break">
