Fix site sub directory pathing issue

--- a/views/partials/lsTemplate.handlebars
+++ b/views/partials/lsTemplate.handlebars
@@ -1,1 +1,1 @@
-<p class="ls">{{perms}} {{numLinks}} ryan ryan {{fileSize}} {{mtime}} <a href="{{basename}}">{{basename}}</a></p>
+<p class="ls">{{perms}} {{numLinks}} ryan ryan {{fileSize}} {{mtime}} <a href="/{{basename}}">{{basename}}</a></p>
