--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -79,7 +79,9 @@
          | | | | |_| | | | | | | (_| | | | | | | | (_| | (_|  __/_ 
          |_| |_|\__,_|_| |_| |_|\__,_|_| |_| |_|  \__,_|\___\___(_)
     -->                                         
-    {{{body}}}
+    <main>
+      {{{body}}}
+    </main>
     <div class="fttr">
       <a href="https://www.gnu.org/software/emacs/">
         <img alt="POWERED BY EMACS" src="/res/stickies/emacs.png" />
