--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,33 +11,33 @@
     <meta name="author" content="Ryan Jeffrey" />
     <link rel="stylesheet" type="text/css" href="/css/terminal.css" />
     <script defer src="/scripts/main.js"></script>
-    <link rel="shortcut icon" type="image/x-icon" href="/res/favicon-32x32.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/res/favicon32x32.ico">
   </head>
   <body>
     <nav>
       <ul>
         <li>
-          <a href="/"><img src="/res/user-home.png" alt="Homepage"></a>
+          <a href="/"><img src="/res/user-home.webp" alt="Homepage"></a>
           <h4>Home</h4>
         </li>
 
         <li>
-          <a href="/posts/"><img src="/res/folder-documents.png" alt="Blog"></a>
+          <a href="/posts/"><img src="/res/folder-documents.webp" alt="Blog"></a>
           <h4>Blog</h4>
         </li>
 
         <li>
-          <a href="/files/"><img src="/res/ktorrent.png" alt="Files"></a>
+          <a href="/files/"><img src="/res/ktorrent.webp" alt="Files"></a>
           <h4>Files</h4>
         </li>
         
         <li>
-          <a href="https://git.ryanmj.xyz"><img src="/res/folder-git.png" alt="git"></a>
+          <a href="https://git.ryanmj.xyz"><img src="/res/folder-git.webp" alt="git"></a>
           <h4>Git Server</h4>
         </li>
 
         <li>
-          <a href="mailto:ryan@ryanmj.xyz"><img alt="Email me" src="/res/kopete.png"></a>
+          <a href="mailto:ryan@ryanmj.xyz"><img alt="Email me" src="/res/kopete.webp"></a>
           <h4>Contact Me</h4>
         </li>
       </ul>
@@ -84,20 +84,20 @@
     </main>
     <div class="fttr">
       <a href="https://www.gnu.org/software/emacs/">
-        <img alt="POWERED BY EMACS" src="/res/stickies/emacs.png" />
+        <img alt="POWERED BY EMACS" src="/res/stickies/emacs.webp" />
       </a>
       <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">
-        <img alt="GPLv3" src="/res/stickies/gplv3.png" />
+        <img alt="GPLv3" src="/res/stickies/gplv3.webp" />
       </a>
       <a href="https://www.sxemacs.org/">
-        <img alt="POWERED BY SXEMACS" src="/res/stickies/sxe.png" />
+        <img alt="POWERED BY SXEMACS" src="/res/stickies/sxe.webp" />
       </a>
       <a href="https://www.xemacs.org/">
-        <img alt="POWERED BY XEMACS" src="/res/stickies/xe.png" />
+        <img alt="POWERED BY XEMACS" src="/res/stickies/xe.webp" />
       </a>
 
       <a href='https://ipv6-test.com/validate.php?url=referer'>
-        <img src='/res/stickies/button-ipv6-big.png' alt='ipv6 ready' title='ipv6 ready'>
+        <img src='/res/stickies/button-ipv6-big.webp' alt='ipv6 ready' title='ipv6 ready'>
       </a>
       
       <a href="https://jigsaw.w3.org/css-validator/check/referer">
