Add more stickies, fix dynamic post reading

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -66,6 +66,12 @@
       <a href="https://jigsaw.w3.org/css-validator/check/referer">
         <img src="/res/stickies/vcss.gif" alt="Valid CSS!">
       </a>
+
+      <a href="https://www.gimp.org/">
+        <img src="/res/stickies/gimp.webp" alt="Valid CSS!">
+      </a>
+
+      <img src="/res/stickies/chrmevil.webp" alt="Valid CSS!">
     </div>
 
   </body>
