--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,4 +1,3 @@
-
 :root {
   --dodger_blue4:#104e8b;
   --dark_orchid2:#b23aee;
@@ -134,7 +133,7 @@ nav img {
 
 .twin {
   border: 1.5em solid transparent;
-  border-image: url(../res/2008.png) 19 12 round;
+  border-image: url(../res/2008.webp) 19 12 round;
   padding: 0;
   /* positioning */
   margin: 0 auto;
@@ -205,7 +204,6 @@ h2 {
 
 body {
   background-color: #2d6189;
-  /*background-image: url('../res/back.jpg');*/
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
   background-size: cover;
