--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml ver/sion="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
           "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
@@ -14,6 +14,7 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <meta name="author" content="Ryan Jeffrey" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon32x32.ico">
+    <%= javascript_include_tag 'generated/movementInSquares', type: 'module', integrity: true %>
   </head>
   <body>
     <nav>
