Can now render blog posts, read blog posts dynamically from /app/orgs

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,9 +3,9 @@
   </div>
   <div id="content">
     <hr class="prompt-break">
-    <span class="prompt1">ryan</span><span class="prompt2">@</span><span class="prompt3">themainframe</span><span class="prompt4"></span> <span>cat {{args}}</span>
+    <span class="prompt1">ryan</span><span class="prompt2">@</span><span class="prompt3">themainframe</span><span class="prompt4"></span> <span>cat <%= @post.url %></span>
     <div class="cat">
-      <%= @post.content.download { |line| puts Orgmode::Parser.new(line).to_html } %>
+      <%= @post.body.html_safe %>
     </div>
   </div>
 </div>
