New css theme, use proper footer tag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
     <main>
       <%= yield %>
     </main>
-    <div class="fttr">
+    <footer>
       <a href="https://www.gnu.org/software/emacs/">
         <%= image_tag '/res/stickies/emacs.webp', alt: 'POWERED BY EMACS' %>
       </a>
@@ -75,6 +75,6 @@
       </a>
 
       <%= image_tag '/res/stickies/chrmevil.webp', alt: 'Chrome is evil!' %>
-    </div>
+    </footer>
   </body>
 </html>
